# control-center

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  meson.build  result  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: dfhv1nwlyh4rf10zjdpyxm5pnsfici26-source  fia6wjlqn2n35rpsvfbkzg3xvqjgwzgw-source
.github/workflows/: test.yml
data/: meson.build  net.bleur.GtkRustTemplate.policy.in.in  uz.xinux.Settings.desktop.in.in  uz.xinux.Settings.gschema.xml.in  uz.xinux.Settings.metainfo.xml.in.in  uz.xinux.Settings.policy.in.in
data/resources/: resources.gresource.xml  style.css
po/: POTFILES.in
s-helper/: Cargo.toml
s-helper/src/: main.rs  meson.build
src/: app.rs  config.rs.in  lib.rs  main.rs  meson.build
src/modals/: display.rs  mod.rs
src/modules/: load.rs
src/ui/: about.rs  accessibility.rs  accounts.rs  appearance.rs  apps.rs  bluetooth.rs  display.rs  load.rs  mod.rs  mouse.rs  multitasking.rs  network.rs  notifications.rs  power.rs  privacyandsecurity.rs  rebuild.rs  search.rs  sharing.rs  sound.rs  system.rs  wellbeing.rs  wifi.rs  window.rs
src/ui/apps/: apps_page.rs  default_apps.rs  mod.rs
src/ui/power/: general_page.rs  mod.rs  power_page.rs  power_saving.rs
src/ui/rebuild/: mod.rs  rebuild_dialog.rs
src/ui/search/: mod.rs  search_locations.rs  search_page.rs
src/ui/system/: mod.rs  system_about.rs  system_l10n.rs  system_page.rs
src/utils/: language.rs  mod.rs
src/utils/modules/: load.rs  modify.rs
