[package]
name = "settings"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0"
description = "Xinux gtk/libadwaita settings app"
homepage = "https://github.com/xinux-org/settings"
repository = "https://github.com/xinux-org/settings"
authors = ["bemeritus", "ae5259"]
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
tracker = "0.2"

# system infos
sysinfo = "0.38.3"
wgpu = "27.0.1"

anyhow = "1.0.102"
gnome-desktop = { package = "gnome-desktop-xinux", version = "0.4.3" }
nmrs = "2.0.1"
zbus = "5.14.0"
glib = "0.22.2"
