[package]
name = "settings"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0"
description = "Xinux gtk/libadwaita settings app"
homepage = "https://github.com/xinux-org/settings"
repository = "https://github.com/xinux-org/settings"
authors = ["bemeritus", "ae5259"]
publish = false

[workspace]
members = [".", "s-helper"]
default-members = [".", "s-helper"]

[workspace.dependencies]
anyhow = "1.0.102"

# Optimize release binary as much as possible
[profile.release]
lto = true
opt-level = "z"

[profile.dev]
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
tracker = "0.2.2"
nix-editor = "0.3.0"
anyhow = "1.0.102"
nixpkgs-fmt = "1.3"
vte = { package = "vte4", version = "0.8" }
nix-data = "0.0.3"
walkdir = "2.3"
serde_yaml = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
# system infos
sysinfo = "0.38.3"
wgpu = "27.0.1"

# power page
ppd = "0.1.0"
zbus = { version = "5.13", default-features = false }
notify = { version = "8.1.0", features = ["serde"] }
regex = "1.12.3"
gnome-desktop = { package = "gnome-desktop-xinux", version = "0.4.3" }
nmrs = "2.0.1"
